About section is half done

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Start your mornings with the world’s best coffees. Try our expertly curated artisan coffees from our best roasters delivered directly to your door, at your schedule"/>
     <title>Coffe Roaster</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link rel="stylesheet" href="./css/main.css">
@@ -17,17 +18,19 @@
                 <a class="site-logo-link" href="index.html">
                     <img class="site-header-logo" src="./img/home/logo.svg" alt="coffe roaster logo" width="236" height="26">
                 </a>
+                <nav class="site-nav">
                 <ul class="site-header-list">
                     <li class="site-header-item">
-                        <a class="site-header-link" href="#">HOME</a>
+                        <a class="site-header-link" href="./index.html">HOME</a>
                     </li>
                     <li class="site-header-item">
-                        <a class="site-header-link" href="#">ABOUT US</a>
+                        <a class="site-header-link" href="./about.html">ABOUT US</a>
                     </li>
                     <li class="site-header-item">
-                        <a class="site-header-link" href="#">CREATE YOUR PLAN</a>
+                        <a class="site-header-link" href="./createplan.html">CREATE YOUR PLAN</a>
                     </li>
                 </ul>
+            </nav>
             </div>
         </div>
     </header>
@@ -161,13 +164,13 @@
                             </a>
                             <ul class="footer-list">
                                 <li class="footer-item">
-                                    <a class="footer-link" href="#">HOME</a>
+                                    <a class="footer-link" href="./index.html">HOME</a>
                                 </li>
                                 <li class="footer-item">
-                                    <a class="footer-link" href="#">ABOUT US</a>
+                                    <a class="footer-link" href="./about.html">ABOUT US</a>
                                 </li>
                                 <li class="footer-item">
-                                    <a class="footer-link" href="#">CREATE YOUR PLAN</a>
+                                    <a class="footer-link" href="./createplan.html">CREATE YOUR PLAN</a>
                                 </li>
                             </ul>
                             <ul class="footer-social-list">
